--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
 	     			  
 	     	<LinearLayout android:id="@+id/tab1"
 						  android:orientation="vertical"
-						  android:layout_width="match_parent"
+						  android:background="@color/colorPrimary"
+				          android:layout_width="match_parent"
 						  android:layout_height="match_parent" >
 
 				<TextView
@@ -33,8 +34,7 @@
 					android:layout_gravity="center"
 					android:layout_marginTop="20dp"
 					android:background="@drawable/rounded_edittext"
-					android:editable="false"
-					android:text="Establecer Ruta"
+					android:text="@string/ruta"
 					android:textAlignment="center"
 					android:textSize="30sp"
 					android:textStyle="bold" />
@@ -43,14 +43,10 @@
 					android:id="@+id/nOrigen"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_below="@id/textView1"
-					android:layout_alignParentEnd="false"
-					android:layout_centerInParent="true"
 					android:layout_marginTop="10dp"
-					android:layout_marginEnd="19dp"
 					android:background="@drawable/rounded_edittext"
 					android:ems="10"
-					android:hint="Introduce letra Origen"
+					android:hint="Introduce Origen"
 					android:inputType="text"
 					android:textAlignment="center"
 					android:textColorHighlight="#9A050207"
@@ -69,7 +65,7 @@
 					android:layout_marginEnd="23dp"
 					android:background="@drawable/rounded_edittext"
 					android:ems="10"
-					android:hint="Introduce letra Destino"
+					android:hint="Introduce Destino"
 					android:inputType="text"
 					android:textAlignment="center"
 					android:textColorHighlight="#9A050207"
@@ -89,7 +85,7 @@
 					android:text="Buscar"
 					android:textColor="#000000"
 					android:textSize="18sp"
-					android:textStyle="normal" />
+					android:textStyle="normal|bold" />
 
 				<TextView
 					android:id="@+id/txtResultado"
@@ -115,6 +111,7 @@
 					android:background="@drawable/borde_redondo"
 					android:onClick="onClickbtnReset"
 					android:text="RESET"
+					android:textSize="18sp"
 					android:textStyle="bold" />
 
 			</LinearLayout>
