--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,141 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-    android:layout_height="match_parent" 
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-<TabHost android:id="@android:id/tabhost" 
-		 android:layout_width="match_parent" 
-		 android:layout_height="match_parent">
-		 
-	 <LinearLayout
-        android:orientation="vertical"
+    <TabHost
+        android:id="@android:id/tabhost"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-		 
-	     <TabWidget android:layout_width="match_parent" 
-	     			android:layout_height="wrap_content"
-			 		android:id="@android:id/tabs"/>
-	     			
-	     <FrameLayout android:layout_width="match_parent" 
-	     			  android:layout_height="match_parent" 
-	     			  android:id="@android:id/tabcontent" >
-	     			  
-	     	<LinearLayout android:id="@+id/tab1"
-						  android:orientation="vertical"
-						  android:layout_width="match_parent"
-						  android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
-				<TextView
-					android:id="@+id/textView1"
-					android:layout_width="381dp"
-					android:layout_height="51dp"
-					android:layout_gravity="center"
-					android:layout_marginTop="20dp"
-					android:background="@drawable/rounded_edittext"
-					android:editable="false"
-					android:text="Establecer Ruta"
-					android:textAlignment="center"
-					android:textSize="30sp"
-					android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-				<EditText
-					android:id="@+id/nOrigen"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_below="@id/textView1"
-					android:layout_alignParentEnd="false"
-					android:layout_centerInParent="true"
-					android:layout_marginTop="10dp"
-					android:layout_marginEnd="19dp"
-					android:background="@drawable/rounded_edittext"
-					android:ems="10"
-					android:hint="Introduce letra Origen"
-					android:inputType="text"
-					android:textAlignment="center"
-					android:textColorHighlight="#9A050207"
-					android:textColorLink="#212121"
-					android:textSize="18sp"
-					android:textStyle="bold" />
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-				<EditText
-					android:id="@+id/nFinal"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_below="@+id/nOrigen"
-					android:layout_alignParentEnd="false"
-					android:layout_centerInParent="true"
-					android:layout_marginTop="12dp"
-					android:layout_marginEnd="23dp"
-					android:background="@drawable/rounded_edittext"
-					android:ems="10"
-					android:hint="Introduce letra Destino"
-					android:inputType="text"
-					android:textAlignment="center"
-					android:textColorHighlight="#9A050207"
-					android:textColorLink="#212121"
-					android:textSize="18sp"
-					android:textStyle="bold" />
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-				<Button
-					android:id="@+id/btnBuscar"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_below="@+id/nOrigen"
-					android:layout_centerInParent="true"
-					android:layout_marginTop="10dp"
-					android:background="@drawable/borde_redondo"
-					android:onClick="onClickbtn"
-					android:text="Buscar"
-					android:textColor="#000000"
-					android:textSize="18sp"
-					android:textStyle="normal" />
+                <LinearLayout
+                    android:id="@+id/tab1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
 
-				<TextView
-					android:id="@+id/txtResultado"
-					android:layout_width="match_parent"
-					android:layout_height="158dp"
-					android:layout_below="@+id/btnBuscar"
-					android:layout_centerInParent="true"
-					android:layout_marginTop="5dp"
-					android:background="@drawable/rounded_edittext"
-					android:inputType="textPersonName"
-					android:lines="5"
-					android:minLines="5"
-					android:padding="5dp"
-					android:singleLine="false"
-					android:textSize="10sp"
-					android:textStyle="bold" />
+                    android:background="#BDBDBD"
+                    android:orientation="vertical">
 
-				<Button
-					android:id="@+id/btnReset"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginTop="5dp"
-					android:background="@drawable/borde_redondo"
-					android:onClick="onClickbtnReset"
-					android:text="RESET"
-					android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="381dp"
+                        android:layout_height="51dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/myrect"
+                        android:text="Establecer Ruta"
+                        android:textAlignment="center"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
 
-			</LinearLayout>
-			
-	     	<LinearLayout android:id="@+id/tab2"
-						  android:orientation="vertical"
-						  android:layout_width="match_parent"
-						  android:layout_height="match_parent" >
+                    <EditText
+                        android:id="@+id/nOrigen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/textView1"
+                        android:layout_alignParentEnd="false"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="19dp"
+                        android:background="@drawable/myrect"
+                        android:ems="10"
+                        android:hint="Introduce letra Origen"
+                        android:inputType="text"
+                        android:textAlignment="center"
+                        android:textColorHighlight="#9A050207"
+                        android:textColorLink="#212121"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
-				<ImageView
-					android:id="@+id/imgView"
-					android:layout_width="wrap_content"
-					android:adjustViewBounds="true"
-					android:layout_height="wrap_content"
-					android:background="@drawable/planta" />
-			</LinearLayout>
-	     			  
-	     </FrameLayout>
-	     
-	</LinearLayout>
-   
-</TabHost>
+                    <EditText
+                        android:id="@+id/nFinal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/nOrigen"
+                        android:layout_alignParentEnd="false"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginEnd="23dp"
+                        android:background="@drawable/myrect"
+                        android:ems="10"
+                        android:hint="Introduce letra Destino"
+                        android:inputType="text"
+                        android:textAlignment="center"
+                        android:textColorHighlight="#9A050207"
+                        android:textColorLink="#212121"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/btnBuscar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/nOrigen"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/myrect"
+                        android:onClick="onClickbtn"
+                        android:padding="5dp"
+                        android:text="BUSCAR RUTA"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtResultado"
+                        android:layout_width="match_parent"
+                        android:layout_height="76dp"
+                        android:layout_below="@+id/btnBuscar"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/myrect"
+                        android:inputType="textPersonName"
+                        android:lines="5"
+                        android:minLines="5"
+                        android:onClick="onClickRuta"
+                        android:padding="5dp"
+                        android:singleLine="false"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/btnReset"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/myrect"
+                        android:onClick="onClickbtnReset"
+                        android:text="RESET"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/btRuta"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/myrect"
+                        android:onClick="onClickRuta"
+                        android:padding="5dp"
+                        android:text="CREAR RUTA"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tab2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imgView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:background="@drawable/planta" />
+                </LinearLayout>
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+    </TabHost>
 
 </LinearLayout>
