--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,6 @@
       android:layout_gravity="bottom|end"
       android:layout_margin="@dimen/fab_margin"
       android:src="@drawable/ic_github_white_24dp"
-      app:backgroundTint="#757575" />
+      app:backgroundTint="#FFFFFF" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
