--- a/app/src/main/res/layout/image_main.xml
+++ b/app/src/main/res/layout/image_main.xml
@@ -12,6 +12,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -73,7 +74,7 @@
                 android:id="@+id/txtplanta_one"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="65dp"
                 android:background="@drawable/myrect"
                 android:elevation="5dp"
                 android:padding="5dp"
@@ -82,6 +83,17 @@
                 android:visibility="invisible"
                 tools:visibility="invisible" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="25dp"
+            android:text="PLANTAS HOSPITAL"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </FrameLayout>
 
