--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -95,6 +95,8 @@
         android:layout_marginTop="125dp"
         android:background="@drawable/myrect"
         android:backgroundTint="#000000"
+        android:enabled="true"
+        android:fadeScrollbars="false"
         android:onClick="onClickRutabtn"
         android:padding="5dp"
         android:text="BUSCAR RUTA"
