--- a/app/src/main/res/layout/image_main.xml
+++ b/app/src/main/res/layout/image_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,7 +8,11 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -20,40 +25,44 @@
                 android:id="@+id/thumb_button_1"
                 android:layout_width="100dp"
                 android:layout_height="75dp"
-                android:background="@drawable/planta1"
+                android:background="@drawable/border"
                 android:contentDescription="@string/description_image_1"
-                android:elevation="5dp"
-                android:scaleType="centerCrop" />
+                android:elevation="2dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/planta1" />
 
             <ImageButton
                 android:id="@+id/thumb_button_2"
                 android:layout_width="100dp"
                 android:layout_height="75dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/planta2"
-                android:contentDescription="@string/description_image_1"
-                android:elevation="5dp"
-                android:scaleType="centerCrop" />
+                android:layout_marginTop="10dp"
+                android:background="@drawable/border"
+                android:contentDescription="@string/description_image_2"
+                android:elevation="2dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/planta2" />
 
             <ImageButton
                 android:id="@+id/thumb_button_3"
                 android:layout_width="100dp"
                 android:layout_height="75dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/planta3"
-                android:contentDescription="@string/description_image_1"
-                android:elevation="5dp"
-                android:scaleType="centerCrop" />
+                android:layout_marginTop="10dp"
+                android:background="@drawable/border"
+                android:contentDescription="@string/description_image_3"
+                android:elevation="2dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/planta3" />
 
             <ImageButton
                 android:id="@+id/thumb_button_4"
                 android:layout_width="100dp"
                 android:layout_height="75dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/planta4"
-                android:contentDescription="@string/description_image_1"
-                android:elevation="5dp"
-                android:scaleType="centerCrop" />
+                android:layout_marginTop="10dp"
+                android:background="@drawable/border"
+                android:contentDescription="@string/description_image_4"
+                android:elevation="2dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/planta4" />
 
         </LinearLayout>
 
@@ -86,11 +95,11 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="25dp"
-            android:text="PLANTAS HOSPITAL"
+            android:background="#607D8B"
+            android:padding="10dp"
+            android:text="@string/plantas_hospital"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
