--- a/app/src/main/res/layout/step_main.xml
+++ b/app/src/main/res/layout/step_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="115dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="109dp"
-        android:text="RUTA ESTABLECIDA"
+        android:text="@string/establecida"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -33,7 +33,7 @@
 
         <LinearLayout
             android:id="@+id/linear_flex"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:orientation="horizontal">
 
@@ -72,7 +72,7 @@
         android:layout_marginEnd="395dp"
         android:background="@drawable/myrect"
         android:elevation="9dp"
-        android:padding="5dp"
+        android:padding="10dp"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
-        android:text="INICIAR"
+        android:text="@string/iniciar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -117,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="32dp"
-        android:text="RETROCEDER"
+        android:text="@string/retroceder"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
