--- a/app/src/main/res/layout/activity_emailpassword.xml
+++ b/app/src/main/res/layout/activity_emailpassword.xml
@@ -48,6 +48,17 @@
             style="@style/ThemeOverlay.MyTextDetail"
             tools:text="Firebase User ID: 123456789abc" />
 
+        <Button
+            android:id="@+id/btContinue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#F44336"
+            android:onClick="onClickStart"
+            android:text="CONTINUAR"
+            android:textColor="#000000"
+            android:visibility="invisible" />
+
     </LinearLayout>
 
     <RelativeLayout
