--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
+        android:textAlignment="textEnd"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        app:titleTextColor="#FF5722" />
 
   </com.google.android.material.appbar.AppBarLayout>
 
